# routing-intelligence

./: .gitignore  README.md  pyproject.toml
research_summary/: README.md  RESEARCH_SUMMARY.md
research_summary/Shopify/: PROPOSAL.md  SHOPIFY.md  SHOPIFY_INTEGRATION.md
src/thinking/: README.md  RESEARCH_OVERVIEW.md  __init__.py
src/thinking/core/: dynamic_router.py  reasoning_modes.py  reasoning_router.py  reasoning_signatures.py  signatures.py
src/thinking/docs/: ARCHITECTURE.md  CACHE_MANAGEMENT.md  GETTING_STARTED.md  MODULE_LOADER_IMPLEMENTATION.md  OPENROUTER_SETUP.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md
src/thinking/experiments/: README.md  validate_setup.py
src/thinking/experiments/core/: breadth_depth_router.py
src/thinking/experiments/data/: breadth_depth_test_cases.py
src/thinking/experiments/evaluation/: breadth_depth_evaluation.py  comparative_routing_test.py  generate_reports.py  routing_efficiency_test.py  threshold_optimization.py
src/thinking/experiments/results/: comparative_routing_analysis.json  comparative_routing_analysis_confusion.json  comparative_routing_report.txt  routing_efficiency_report.txt  routing_efficiency_results.json  threshold_matrix.json  threshold_optimization_report.txt
src/thinking/optimizations/: README.md  result.json
src/thinking/optimizations/atom_of_thoughts/: __init__.py  evaluation.py  training.py  training_examples.jsonl
src/thinking/scripts/: __init__.py  clean_cache.py  clean_cache.sh  demo_proof_of_concept.py  lm_proof_of_concept.py  lm_proof_of_concept_scoring.py  main.py
(+52 files in other folders)
